--- a/src/frontend/styles/general.css
+++ b/src/frontend/styles/general.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,300italic,400italic,600italic,700italic,800italic);
+
 body {
     /* background:linear-gradient(
         rgba(30,27,38, 0.95), 
@@ -14,4 +17,16 @@ body {
     background-size: cover;
     background-repeat: repeat;
     color: rgb(190, 190, 190);
+  }
+
+  h1,h2,h3 {
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  span {
+    font-family: 'Open Sans', sans-serif;
+  }
+
+  a {
+    font-family: 'Montserrat', sans-serif;
   }
