--- a/src/frontend/styles/general.css
+++ b/src/frontend/styles/general.css
@@ -1,5 +1,8 @@
+@charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,300italic,400italic,600italic,700italic,800italic);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
+@import url(https://fonts.googleapis.com/css?family=Nunito:400,700);
 
 body {
     /* background:linear-gradient(
