--- a/src/frontend/styles/general.css
+++ b/src/frontend/styles/general.css
@@ -4,6 +4,11 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
 @import url(https://fonts.googleapis.com/css?family=Nunito:400,700);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
     /* background:linear-gradient(
         rgba(30,27,38, 0.95), 
@@ -16,10 +21,8 @@ body {
     background:linear-gradient(
         rgba(30,27,38, 0.95), 
         rgba(30,27,38, 0.95));
-    background-position: center;
-    background-size: cover;
-    background-repeat: repeat;
     color: rgb(190, 190, 190);
+    overflow-x: hidden;
   }
 
   h1,h2,h3 {
